# ltp

./: CHANGES  Makefile.am  Makefile.in  NOTICE  README  configure  configure.ac  ltp.1  ltp.1.txt  ltp.lua
doc/: ltp.1.html
ltp/: template.lua  util.lua
