dnl Copyright 2008 Savarese Software Research Corporation
dnl
dnl Licensed under the Apache License, Version 2.0 (the "License");
dnl you may not use this file except in compliance with the License.
dnl You may obtain a copy of the License at
dnl
dnl     http://www.savarese.com/software/ApacheLicense-2.0
dnl
dnl Unless required by applicable law or agreed to in writing, software
dnl distributed under the License is distributed on an "AS IS" BASIS,
dnl WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
dnl See the License for the specific language governing permissions and
dnl limitations under the License.

AC_INIT(ltp, 1.0.1)
AC_PREREQ(2.50)
AC_CONFIG_AUX_DIR(config)
AC_CANONICAL_HOST
AC_CANONICAL_SYSTEM
AC_COPYRIGHT([
Copyright 2008 Savarese Software Research Corporation.  All rights reserved.
])

AM_INIT_AUTOMAKE
AC_PROG_INSTALL()
AC_PROG_MAKE_SET
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
